--- a/src/Watch.scss
+++ b/src/Watch.scss
@@ -1,13 +1,12 @@
 @font-face {
   font-family: 'Digital Dismay';
-  src: url('assets/DigitalDismay-VAKw.ttf');
+  src: url('/assets/DigitalDismay-VAKw.ttf');
 }
 
 :root {
   --animation-blink: blink 0.6s infinite alternate;
-  --font-family: ff-providence-sans-web-pro, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  --font-family: ff-providence-sans-web-pro, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 body,
@@ -31,23 +30,20 @@ a {
 
     --columns_small: 100%;
     --rows_small: auto 132px 419px auto auto;
-    --areas_small: 'project-info' 'beep' 'face-and-buttons' 'battery-button'
-      'state-info' 'fig-31';
+    --areas_small: 'project-info' 'beep' 'face-and-buttons' 'battery-button' 'state-info' 'fig-31';
 
     --min-height_default: 100vh;
     --columns_default: 430px min(72px, 3vw) 1fr;
     --rows_default: auto 132px auto auto 1fr auto auto;
-    --areas_default: 'project-info project-info project-info project-info'
-      'state-info . beep .' 'state-info . face-and-buttons .'
-      'state-info . battery-button .' 'state-info . . . '
+    --areas_default: 'project-info project-info project-info project-info' 'state-info . beep .'
+      'state-info . face-and-buttons .' 'state-info . battery-button .' 'state-info . . . '
       'fig-31 fig-31 fig-31 fig-31';
     --row-gap_default: 24px;
 
     --rows_large: 132px auto auto 1fr auto auto;
     --columns_large: 0.7fr 430px min(72px, 3vw) max-content 1fr;
     --areas_large: '. state-info . beep .' '. state-info . face-and-buttons .'
-      '. state-info . battery-button .' '. state-info . . . '
-      'fig-31 fig-31 fig-31 fig-31 fig-31';
+      '. state-info . battery-button .' '. state-info . . . ' 'fig-31 fig-31 fig-31 fig-31 fig-31';
 
     box-sizing: border-box;
     min-height: var(--min-height_default);
